# SystemC_newCompression_Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
coder/: CMakeLists.txt
coder/include/: decoder.h  encoder.h
coder/src/: decoder.cpp  encoder.cpp
submodules/lz4xx/: CMakeLists.txt
submodules/lz4xx/examples/: example2.cpp
test/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp  main.cpp  test.cpp  testbench.cpp
